# canny-edge-detection

./: .gitignore  CMakeLists.txt  README.md  compute.cl  image_diff.py  main.c  opencl.c
